--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 	<meta charset="utf-8">
 	<!-- <base href="/"> -->
 
-	<title>OptimizedHTML 4</title>
+	<title>Stanislav Kulynych</title>
 	<meta name="description" content="">
 
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -98,7 +98,7 @@
                         </div>
 
                         <div class="about-left_im">
-                            <img src="img/im.png" alt="1">
+                            <img class="left-img" width="450px" src="img/im.jpg" alt="1">
                             <h2>кто я</h2>
                             <p>
                                 Lorem ipsum dolor sit amet, consectetur adipisicing elit.
