--- a/index.html
+++ b/index.html
@@ -48,8 +48,21 @@
             </div>
 
             <div class="hamburger-right">
-                <div class="head-items_hamburger">
-                    <i class="fas fa-bars"></i>
+                <div class="nav">
+                    <a href="#" class="nav__trigger">
+                        <div class="bars"></div>
+                    </a>
+
+                    <div class="nav__content">
+                        <nav class="nav__list">
+                            <ul>
+                                <li class="nav__item"><a href="#">Home</a></li>
+                                <li class="nav__item"><a href="#">About</a></li>
+                                <li class="nav__item"><a href="#">Team</a></li>
+                                <li class="nav__item"><a href="#">Contact</a></li>
+                            </ul>
+                        </nav>
+                    </div>
                 </div>
             </div>
         </div>
