--- a/index.html
+++ b/index.html
@@ -27,6 +27,9 @@
 </head>
 
 <body>
+<div class="loaderarea">
+    <div class="loader"></div>
+</div>
 
 	<header>
 
@@ -235,6 +238,14 @@
 
 
 	<script src="js/scripts.min.js"></script>
-
+	<script src="libs/jquery/dist/jquery.min.js"></script>
+    <script>
+        $(window).on('load', function () {
+            $preloader = $('.loaderarea'),
+                $loader = $preloader.find('.loader');
+            $loader.fadeOut();
+            $preloader.delay(350).fadeOut('slow');
+        });
+    </script>
 </body>
 </html>
